Fixed alignment issues and changed font/text/colors

--- a/public/edit.css
+++ b/public/edit.css
@@ -1,17 +1,9 @@
 h1 {
     text-align: center;
     font-family: 'Source Serif Pro', serif;
-    text-decoration: underline;
-
-
 }
 
-h2 {
-    font-family: 'Source Serif Pro', serif;
-
-}
-
-h4 {
+a {
     font-family: 'Source Serif Pro', serif;
 }
 
@@ -20,18 +12,13 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    background-color: skyblue;
 }
 
 
 img {
     width: 200px;
-    margin: 16.5px 105.7px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}
-
+    margin: auto;
 }
 
 .index-container {
@@ -41,7 +28,7 @@ img {
     width: 100%;
 }
 
-/* tried to use flex-box to make rows */
+
 .index {
     display: inline-flex;
     flex-direction: column;
@@ -52,8 +39,6 @@ img {
     margin: 0 auto;
 }
 
-
-
 .buttons {
     display: inline-flex;
     flex-direction: row;
@@ -62,17 +47,12 @@ img {
     width: 33.1%;
 }
 
+.input {
+    display: flex;
+    justify-content: center;
+
+}
+
 form {
     margin: 10px 0 0 30px;
-}
-
-
-
-.card-panel.blue.lighten-2 {
-    margin: 0px;
-    padding: 26px;
-}
-
-.laura {
-    margin: 0px;
 }
